[package]
name = "cyan-backend-integrations"
version = "0.0.1"
edition = "2024"
description = "Backend integrations with Slack, Confluence, github, JIRA and much more"
license-file = "LICENSE"

[[bin]]
name = "cyan-cli"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
blake3 = "1.8.2"
regex = "1.12.2"
chrono = "0.4.42"
tracing = "0.1.41"